...
    <com.co.retrofit.app.feature.view.fragments.HeaderView
            android:id="@+id/home_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_album_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible" />

    <TextView
            android:id="@+id/tv_album_available"
...
