<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <LinearLayout
            android:layout_width="match_parent"
            tools:context=".feature.view.fragments.AlbumsOfArtistFragment"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/title_detail_artist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/_8sdp">

            <ImageView
                android:id="@+id/back_detail_artist"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_48sdp"
                android:src="@drawable/back"
                android:contentDescription="@string/usability_back"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:text="Detalle Artista"
                android:textAlignment="center"
                android:textSize="@dimen/_24sdp"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/dark_gray" />

        <ImageView
                android:id="@+id/artist_image"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_120sdp"
                android:layout_margin="@dimen/_1sdp"
                android:contentDescription="@string/image_contentDescription"
                tools:src="@mipmap/ic_launcher"
                android:paddingTop="10dp"/>

        <TextView
                android:id="@+id/artist_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/_1sdp"
                android:gravity="center"
                android:textColor="@color/blue"
                android:textSize="@dimen/_16sdp"
                android:textStyle="bold"
                android:paddingBottom="2dp"
                android:paddingTop="2dp"
                 />

        <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/_1sdp"
                android:gravity="center"
                android:textColor="@color/blue"
                android:textSize="@dimen/_14sdp"
                android:textStyle="bold"
                android:text="@string/fecha_de_creacion"
                android:paddingBottom="0dp"
                />

        <TextView
                android:id="@+id/artist_creation_date"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/_5sdp"
                android:gravity="center"
                android:textColor="@color/blue"
                android:textSize="@dimen/_12sdp"
                android:paddingBottom="0dp"
                />

        <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/_1sdp"
                android:gravity="center"
                android:textColor="@color/blue"
                android:textSize="@dimen/_14sdp"
                android:textStyle="bold"
                android:paddingBottom="0dp"
                android:text="@string/descripcion"
                />

        <TextView
                android:id="@+id/artist_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_5sdp"
                android:gravity="center"
                android:textColor="@color/blue"
                android:textSize="@dimen/_12sdp"
                android:paddingBottom="0dp"
                />
        <TextView
                android:id="@+id/titulo_lista_albumes"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/_1sdp"
                android:gravity="center"
                android:textColor="@color/blue"
                android:textSize="@dimen/_14sdp"
                android:textStyle="bold"
                android:text="@string/albumes"
                android:paddingBottom="0dp"
                android:contentDescription="@string/usability_artist_album_title"/>

        <TextView
                android:id="@+id/txt_no_comments"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_no_comments"
                android:visibility="gone" />

        <androidx.recyclerview.widget.RecyclerView

                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:spanCount="2"
                android:id="@+id/albumsOfArtistRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="vertical"
                tools:listitem="@layout/album_of_artist_item"
                android:contentDescription="@string/usability_artist_album_list">

        </androidx.recyclerview.widget.RecyclerView>
    </LinearLayout>
</ScrollView>