<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
            android:id="@+id/navigation_album"
            android:icon="@drawable/outline_home_24"
            android:title="@string/title_home" />
    <item
            android:id="@+id/navigation_collector"
            android:icon="@drawable/outline_interests_24"
            android:title="@string/title_collector" />
    <item
            android:id="@+id/navigation_artist"
            android:icon="@drawable/outline_perm_identity_24"
            android:title="@string/title_artist" />

</menu>