<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".feature.view.fragments.ArtistListFragment"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <com.co.retrofit.app.feature.view.fragments.HeaderView
            android:id="@+id/home_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    <androidx.recyclerview.widget.RecyclerView
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:spanCount="2"
            android:id="@+id/artistRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:listitem="@layout/artist_item"/>


</LinearLayout>